2016-10-21  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/main.cpp (main): use running() to exit before calling
	run().
	* src/client/GameEngine.cpp (running): implement getter function.
	* src/client/GameEngine.hpp (running): add running() declaration.

2016-10-20  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (Exit_OnClick): make the main menu's exit
	button exit the game.
	* src/client/GameEngine.hpp (GameEngine): add Exit_OnClick declaration.

2016-10-19  Jérôme Pasquier  <rainbru@free.fr>

	* CI/before_install.sh: another /usr/local/lib test using tee.

	* CI/before_install.sh: add basic manual installation of CEGUI 0.8.

2016-10-18  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/menu.layout: change Y positions to buttons to make
	the buttons appear in new window type.
	* media/layouts/menu.layout (GameMenu): change type to
	TaharezLook/FrameWindow to make the resize cursors appear.

	* src/client/GameEngine.cpp (GameEngine): hide OIS mouse cursor.

2016-10-14  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (run): Initialize mouse position to 0,0.
	* src/client/GameEngine.cpp (run): Taharez mouse cursor is back.
	* DEPENDENCIES (CEGUI): change from 0.7 to 0.8.

	* src/client/GameEngine.cpp: many changes due to new CEGUI version.
	* src/client/GameEngine.cpp: CEGUI's inject* called from mContext.
	* src/client/GameEngine.hpp (mContext): add CEGUI context as pointer.

2016-10-07  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (initializeCegui): becomes a new function
	to be able to move this code.

2016-10-06  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (GameEngine): move lb->finish() and
	add some logger message.
	* src/client/GameEngine.hpp (GameEngine): mSceneMgr becomes a member.

2016-10-05  Jérôme Pasquier  <rainbru@free.fr>

	* ROADMAP: close the git switch item.

	* INSTALL.md: updated with 'Installation Instructions'.
	* INSTALL: renamed to INSTALL.md.