@@ -1,0 +1,13 @@
+<?xml version="1.0" ?><!--                   -*-xml-*- -->
+<GUILayout version="4">
+    <Window name="StaticLogo" type="Vanilla/FrameWindow">
+        <Property name="Position" value="{{0.1,},{0.05,0}}" />
+        <Property name="Size" value="{{0.8,0},{0.2,0}}" />
+        <Property name="FrameEnabled" value="False" />
+<!--        <Property name="BackgroundEnabled" value="True" /> -->
+	
+	<Window name="StaticLogo" type="Vanilla/FrameWindow">
+	  <Property Name="BackgroundImage" Value="set:logo image:logoBackground" />
+	</Window>
+</Window>
+</GUILayout>
