@@ -8,10 +8,10 @@
 
 	<!-- Type was Vanilla/FrameWindow" -->
        <Window name="GameMenu" type="TaharezLook/FrameWindow">
-	 <Property name="MinSize" value="{{0.1,0},{0.1,0}}" />
+	 <Property name="MinSize" value="{{0.1,0},{0.3,0}}" />
 	 <Property name="MaxSize" value="{{0.8,0},{0.8,0}}" />
-	 <Property name="Position" value="{{0.35,0},{0.1,0}}" />
-	 <Property name="Size" value="{{0.3,0},{0.5,0}}" />
+	 <Property name="Position" value="{{0.35,0},{0.3,0}}" />
+	 <Property name="Size" value="{{0.3,0},{0.45,0}}" />
 	 <Property name="Text" value="GameMenu" />
 	 <Property name="CloseButtonEnabled" value="False" />
 
